--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,298 +1,221 @@
-.navbar_frame{
-    position:relative;
+.home_page{
+    display: flex;
+    flex-direction: column;
+}
+
+.header_frame{
+    position: relative;
+    margin-top: 47px;    
     width: 100%;
-    height: 145px;
+    height: auto;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
-
-    background: rgb(68, 50, 151);
 }
-.container{
+
+.header_frame .container{
+    flex-direction: row;
+}
+
+.container .header_left{
     position: relative;
-    padding: 20px 0 14px;
-    width: 1320px;
-    height: auto;
+    padding: 15px;
+    width: 875px;
+    height: 508px;
+
+    background: rgb(0, 83, 246);
+    background-image: url(../images/icons/header_bg.svg);
+}
+
+.header_left .header_content{
+    margin-top: 90px;
 
     display: flex;
     flex-direction: column;
 }
 
-.navbar_top{
-    width: 100%;
-    height: 50px;
-
-    display: flex;
-    flex-direction: row;
-}
-
-.navbar_top > a img{
-    width: 117px;
-    height: 36px;
-    margin-right: 76px;
-
-
-}
-
-.navbar_top .search_box{
-    padding: 10px 17px;
-    width: auto;
-    height: auto;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.navbar_top  .nav_search_frame{
-    width: 650px;
-    height: 50px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: #fff;
-}
-
-.navbar_top .nav_top_menu{
-    margin-left: 59px;
-    width: 416px;
-    height: 50px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.search_box .category_list{
-    width: 166px;
+.header_content div{
+    width: 104px;
     height: 30px;
-
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     align-items: center;
+    border-radius: 6px;
+    background: rgb(245, 195, 75);
 
-    border-right: 1px solid #d6d6d6;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
 }
 
-.category_list select{
-     width: 140px;
-    height: 30px;
+.header_content span{
+    margin-top: 10px;
+    width: 428px;
 
-    border: none;
-    outline: none;
+    font-family: "Jost";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 87px;
+
+    color: #ffffff;
+}
+
+.header_content p{
+    margin-top: 10px;
+
+    font-family: "Jost";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+
+    color: #ffffff;
+
+    
+}
+
+.header_content a{
+    margin-top: 20px;
+    width: 140px;
+    height: 52px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+    border-radius: 6px;
+    background: rgb(245, 195, 75);
+
     color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 15px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0%;
-    text-align: left;
 
 }
 
-.nav_search_frame .search_icon_box{
-    width: 50px;
-    height: 50px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f5c34b;
-    border-radius: 0 6px 6px 0;
-
-
-}
-search_icon_box img{
-    width: 20px;
-    height: 20px;
+.header_content img{
+    position: absolute;
+    right: 10px;
 }
 
-.nav_top_menu .top_menu_box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    cursor: pointer;
-}
-.top_menu_box .box_icon_box{
-    width: 54px;
-    height: 50px;
-    margin-right: 16px;
+.container .header_right {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: 20px;
 
-    border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.box_icon_box img{
-    width: 22px;
-    height: 22px;
-}
-
-.box_info_box span{
-    /* [object Object] */
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-align: left;
-}
-.box_info_box strong{
-    /* [object Object] */
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-align: left;
-}
-
-.top_menu_box  .box_info_box{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
+} 
+
+.header_right  .header_box  {
+    width: 422px;
+    height: 240px;
+
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: row;
+    background: #f2f2f2;
 }
-.search_box input{
-    margin-left: 12px;
-    width: 387px;
-    height: 22px;
 
-    color: rgb(98, 105, 116);
+.header_right .box_left {
+    margin-left: 30px;
+    width: 50%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box_left span {
+    /* [object Object] */
+color: rgb(0, 83, 246);
+font-family: Jost;
+font-size: 15px;
+font-weight: 400;
+line-height: 22px;
+letter-spacing: 0%;
+}
+
+.box_left p {
+    margin: 10px 0;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 38px;
+    letter-spacing: 0%;
+}
+
+.box_left a{
+    color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 15px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0%;
-    text-align: left;
-
-    border: none;
-    outline: none;
 }
 
-.box_icon_box .basket_count{
-    width: 15px;
-    height: 15px;
+.box_left .hover_border{
+    margin-top: 3px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 32px;
+    height: 2px;
 
-    border-radius: 50%;
-
-    color: rgb(11, 30, 64);
-    font-family: Jost;
-    font-size: 8px;
-    font-weight: 700;
-    line-height: 10px;
-    letter-spacing: 0%;
-    text-align: left;
-
-    position: absolute;
-    right: -2px;
-    top: -3px;
-    background: #f5c34b;
+    background: rgb(4, 30, 66);
 }
 
-.navbar_bott{
-    margin-top: 20px;
+.header_box .box_right{
+    width: 50%;
+}
+
+.box_right img{
     width: 100%;
-    height: 40px;
-
-    display: flex;
-    flex-direction: row;
-
-    border-top: 1px solid #5746a1;
+    height: 100%;
 }
 
-.navbar_bott .navbar_bott_menu_box {
-    width: auto;
-    height: auto;
-    margin-top: 10px;
 
-    display: flex;
-    flex-direction: row;
-}
 
-.navbar_bott .browse_box{
-    width: 185px;
-    height: 30px;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-right: 1px solid #5746a1;
-}
 
-.browse_box img{
-    width: 20px;
-    height: 18px;
-    margin-right: 10px;
-}
-.browse_box span{
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
-    text-align: left;
-}
 
-.navbar_bott_menu_box .navbar_route_menu{
-    margin-left: 12px;
-    width: 690px;
 
-    /*width: auto;*/
-    /*height: 40px;*/
 
-    display: flex;
-    flex-direction: row;
 
-}
 
-.navbar_route_menu .router_menu{
-    width: auto;
-    height: 41px;
-    margin-right: 20px;
 
-    display: flex;
 
-}
-.router_menu a{
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
-    text-align: left;
-}
 
-.router_menu a.active{
-    color: #f5c34b;
-}
 
-.navbar_bott_menu_box .sorting_menu{
-    display: flex;
-    flex-direction: row;
 
-}
 
-.sorting_menu span{
-    margin-left: 20px;
-    color: rgb(255, 255, 255);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
