--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,8 @@
 .home_page{
+    padding-bottom: 60px;
     display: flex;
     flex-direction: column;
+
 }
 
 .header_frame{
@@ -17,7 +19,7 @@
     flex-direction: row;
 }
 
-.container .header_left{
+.header_frame  .container .header_left{
     position: relative;
     padding: 15px;
     width: 875px;
@@ -27,14 +29,14 @@
     background-image: url(../images/icons/header_bg.svg);
 }
 
-.header_left .header_content{
+.header_frame  .header_left .header_content{
     margin-top: 90px;
 
     display: flex;
     flex-direction: column;
 }
 
-.header_content div{
+.header_frame  .header_content div{
     width: 104px;
     height: 30px;
     display: flex;
@@ -51,7 +53,7 @@
     letter-spacing: 0%;
 }
 
-.header_content span{
+.header_frame  .header_content span{
     margin-top: 10px;
     width: 428px;
 
@@ -64,7 +66,7 @@
     color: #ffffff;
 }
 
-.header_content p{
+.header_frame  .header_content p{
     margin-top: 10px;
 
     font-family: "Jost";
@@ -78,7 +80,7 @@
     
 }
 
-.header_content a{
+.header_frame  .header_content a{
     margin-top: 20px;
     width: 140px;
     height: 52px;
@@ -100,12 +102,12 @@
 
 }
 
-.header_content img{
+.header_frame  .header_content img{
     position: absolute;
     right: 10px;
 }
 
-.container .header_right {
+.header_frame  .container .header_right {
     position: relative;
     margin-left: 20px;
 
@@ -115,7 +117,7 @@
 
 } 
 
-.header_right  .header_box  {
+.header_frame  .header_right  .header_box  {
     width: 422px;
     height: 240px;
 
@@ -126,7 +128,7 @@
     background: #f2f2f2;
 }
 
-.header_right .box_left {
+.header_frame  .header_right .box_left {
     margin-left: 30px;
     width: 50%;
 
@@ -135,17 +137,16 @@
     justify-content: center;
 }
 
-.box_left span {
-    /* [object Object] */
-color: rgb(0, 83, 246);
-font-family: Jost;
-font-size: 15px;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0%;
+.header_frame  .box_left span {
+    color: rgb(0, 83, 246);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
 }
 
-.box_left p {
+.header_frame  .box_left p {
     margin: 10px 0;
     color: rgb(4, 30, 66);
     font-family: Jost;
@@ -155,7 +156,7 @@ letter-spacing: 0%;
     letter-spacing: 0%;
 }
 
-.box_left a{
+.header_frame  .box_left a{
     color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 15px;
@@ -164,7 +165,7 @@ letter-spacing: 0%;
     letter-spacing: 0%;
 }
 
-.box_left .hover_border{
+.header_frame  .box_left .hover_border{
     margin-top: 3px;
 
     width: 32px;
@@ -173,13 +174,71 @@ letter-spacing: 0%;
     background: rgb(4, 30, 66);
 }
 
-.header_box .box_right{
+.header_frame  .header_box .box_right{
     width: 50%;
 }
 
-.box_right img{
+.header_frame  .box_right img{
     width: 100%;
     height: 100%;
+}
+
+/* service frame started */
+
+
+.home_page .service_frame {
+
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+
+
+}
+
+.service_frame .container {
+    flex-direction: row;
+}
+
+.service_frame .container .service_box{
+    width: 25%;
+    height: 86px;
+
+    display: flex;
+    flex-direction: row;
+     border-bottom:  1px  solid #eaeaea;
+}
+
+.service_frame .service_box  img{
+    width: 35px;
+    height: 35px;
+}
+
+.service_frame .service_box .service_content  {
+    margin-left: 14px;
+    display: flex;
+    flex-direction: column;
+}
+
+.service_frame .service_content span {
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.service_frame .service_content p{
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
 }
 
 
