--- a/public/css/home.css
+++ b/public/css/home.css
@@ -241,6 +241,137 @@
     letter-spacing: 0%;
 }
 
+/*Shop Category*/
+
+
+.shop_category_frame{
+    position: relative;
+    margin-top: 90px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+}
+.shop_category_frame .container{
+    flex-direction: column;
+
+}
+
+.shop_category_frame  .container .category_top{
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.shop_category_frame  .category_top span{
+    color: rgb(4, 30, 66);
+
+    font-family: "Jost";
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+.shop_category_frame  .category_top  a{
+    color: rgb(4, 30, 66);
+    font-family: "Jost";
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.shop_category_frame  .category_top  a:hover{
+    border-bottom: 1px  solid  rgb(4, 30, 66);;
+}
+
+
+.shop_category_frame  .container  .category_wrapper{
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.shop_category_frame  .category_wrapper .category_box{
+    width: 142px;
+    height: auto;
+    cursor: pointer;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.shop_category_frame  .category_box .category_img_box{
+    width: 100%;
+    height: 150px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid rgb(234, 234, 234);
+    border-radius: 150px;
+}
+.shop_category_frame  .category_box span{
+    margin-top: 15px;
+    color: rgb(4, 30, 66);
+    font-family: 'Jost';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
