--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,42 @@
 
 }
 
+.container .category_top{
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.container .category_top span{
+    color: rgb(4, 30, 66);
+
+    font-family: "Jost";
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+}
+
+.container  .category_top  a{
+    color: rgb(4, 30, 66);
+    font-family: "Jost";
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+
+}
+
+.container    .category_top  a:hover{
+    border-bottom: 1px  solid  rgb(4, 30, 66);;
+}
+
 .header_frame{
     position: relative;
     margin-top: 47px;    
@@ -258,39 +294,6 @@
 
 }
 
-.shop_category_frame  .container .category_top{
-    width: 100%;
-    height: auto;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-}
-.shop_category_frame  .category_top span{
-    color: rgb(4, 30, 66);
-
-    font-family: "Jost";
-    font-size: 28px;
-    font-weight: 400;
-    line-height: 40px;
-    letter-spacing: 0%;
-}
-.shop_category_frame  .category_top  a{
-    color: rgb(4, 30, 66);
-    font-family: "Jost";
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-}
-
-.shop_category_frame  .category_top  a:hover{
-    border-bottom: 1px  solid  rgb(4, 30, 66);;
-}
-
-
 .shop_category_frame  .container  .category_wrapper{
     margin-top: 30px;
     width: 100%;
@@ -331,6 +334,229 @@
     letter-spacing: 0%;
     text-align: center;
 }
+
+
+/*Selling product frame started-*/
+
+.selling_product_frame {
+    position: relative;
+    margin-top: 60px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
+.selling_product_frame .container {
+    flex-direction: column;
+
+}
+
+.container .product_wrapper{
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.product_wrapper .next_prev_box{
+    width: 25px;
+
+}
+
+.next_prev_box img{
+    position: absolute;
+    top: 50%;
+
+}
+
+.product_wrapper .product_boxes{
+    position: relative;
+    width: 1224px;
+    height: 452px;
+
+    display: flex;
+    flex-direction: row;
+
+}
+
+.product_boxes .prooduct_box{
+    width: 306px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+}
+
+.prooduct_box .product_img_box{
+    width: 100%;
+    height: 280px;
+
+}
+
+.product_img_box .hover_box{
+    display: none;
+    width: 100%;
+    height: 100%;
+
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+.hover_box button{
+    margin-bottom: 10px;
+    width: 260px;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: none;
+    outline: none;
+
+    border-radius: 6px;
+    box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
+    background: rgb(0, 83, 246);
+
+    color: rgb(68, 50, 151);
+    font-family: 'Jost';
+    font-style: normal;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 23px;
+}
+
+.product_img_box:hover .hover_box{
+
+    display: flex;
+}
+
+.prooduct_box  .product_content_box {
+    padding: 5px 22px;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+}
+
+.product_content_box .product_title{
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+}
+
+.product_content_box .product_desc{
+    margin-top: 7px;
+    height: 56px;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.product_content_box .review_box{
+    margin-top: 7px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.review_box img{
+    margin-right: 5px;
+
+}
+
+.review_box span{
+    margin-left: 10px;
+
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.product_content_box .price_box{
+    margin-top: 10px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.price_box strong{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+}
+
+.price_box span {
+    margin-left: 10px;
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-decoration-line: line-through;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Selling product frame finished-*/
 
 
 
