--- a/public/css/home.css
+++ b/public/css/home.css
@@ -585,24 +585,24 @@
 /*Adv Frame*/
 
 
-/*.home_page .adv_frame{*/
-/*    margin-top: 90px;*/
-/*    width: 100%;*/
-/*    height: 120px;*/
+.home_page .adv_frame{
+    margin-top: 90px;
+    width: 100%;
+    height: 120px;
 
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-/*    background: #e5edff;*/
+    background: #e5edff;
 
-/*    color: rgb(0, 83, 246);*/
-/*    font-family: Jost;*/
-/*    font-size: 18px;*/
-/*    font-weight: 400;*/
-/*    line-height: 26px;*/
-/*    letter-spacing: 0%;*/
-/*}*/
+    color: rgb(0, 83, 246);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+}
 
 
 
