--- a/public/css/home.css
+++ b/public/css/home.css
@@ -95,9 +95,18 @@
     border-radius: 50%;
 }
 
+/*Hover_border*/
 
+.container .hover_border{
+    margin-top: 3px;
 
-/*pag finished*/
+    width: 32px;
+    height: 2px;
+
+    background: rgb(4, 30, 66);
+}
+
+/*Header started*/
 
 .header_frame{
     position: relative;
@@ -259,14 +268,7 @@
     letter-spacing: 0%;
 }
 
-.header_frame  .box_left .hover_border{
-    margin-top: 3px;
 
-    width: 32px;
-    height: 2px;
-
-    background: rgb(4, 30, 66);
-}
 
 .header_frame  .header_box .box_right{
     width: 50%;
@@ -603,6 +605,175 @@
     line-height: 26px;
     letter-spacing: 0%;
 }
+
+/*SPEC PRODUCT  */
+
+.home_page .spec_product_frame{
+
+    position: relative;
+    margin-top: 90px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.spec_product_frame .container {
+    flex-direction: column;
+
+}
+
+
+
+.container .spec_product_wrapper {
+    position: relative;
+    margin-top: 35px;
+    width: 100%;
+    height: auto;
+
+
+    display: flex;
+    flex-direction: row;
+
+}
+
+.spec_product_wrapper .big_product_box {
+    position: relative;
+    padding: 30px;
+    width: 664px;
+    height: 368px;
+
+    display: flex;
+    flex-direction: row;
+
+    box-sizing: border-box;
+    border-radius: 6px;
+    background: rgb(243, 245, 246);
+
+}
+
+.big_product_box .big_product_content{
+    width: 160px;
+
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+.big_product_content span {
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.big_product_content p {
+    margin:  7px 0;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 38px;
+    letter-spacing: 0%;
+}
+
+.big_product_content a {
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.big_product_box img{
+    position: absolute;
+    width: 322px;
+    height: 309px;
+
+    right: 5%;
+}
+
+.spec_product_wrapper .small_product_wrapper{
+    margin-left: 30px;
+    width: 620px;
+    height: 368px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.small_product_wrapper .small_product_box{
+    position: relative;
+    padding: 30px;
+    width: 293px;
+    height: 170px;
+
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+
+    background: #f3f5f6;
+    border-radius: 6px;
+}
+
+
+.small_product_box:nth-child(odd){
+    margin-right: 30px;
+}
+.small_product_box .small_product_content{
+    display: flex;
+    flex-direction: column;
+
+}
+
+
+.small_product_content  strong{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.small_product_content  span{
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.small_product_box .top_img{
+    position: absolute;
+    right: 30px;
+    top: 40px;
+}
+
+.small_product_box .bottom_img{
+    position: absolute;
+    right: 20px;
+    top: 80px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
