--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,6 +15,12 @@
     align-items: center;
 
 }
+
+.container .category_top div{
+    display: flex;
+    flex-direction: row;
+
+}
 .container .category_top span{
     color: rgb(4, 30, 66);
 
@@ -27,6 +33,7 @@
 }
 
 .container  .category_top  a{
+    margin-left: 30px;
     color: rgb(4, 30, 66);
     font-family: "Jost";
     font-size: 15px;
@@ -104,6 +111,157 @@
     height: 2px;
 
     background: rgb(4, 30, 66);
+}
+
+.container .next_prev_box{
+    width: 25px;
+
+}
+
+.container  .next_prev_box img{
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+
+}
+
+
+/*PRODUCT CARD*/
+
+
+.container   .product_box{
+    width: 306px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+}
+
+.container    .product_box .product_img_box{
+    width: 100%;
+    height: 280px;
+
+}
+
+.container     .product_img_box .hover_box{
+    display: none;
+    width: 100%;
+    height: 100%;
+
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+.container     .hover_box button{
+    margin-bottom: 10px;
+    width: 260px;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: none;
+    outline: none;
+
+    border-radius: 6px;
+    box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
+    background: rgb(0, 83, 246);
+
+    color: rgb(68, 50, 151);
+    font-family: 'Jost';
+    font-style: normal;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 23px;
+}
+
+.container     .product_img_box:hover .hover_box{
+
+    display: flex;
+}
+
+.container   .product_content_box {
+    padding: 5px 22px;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+}
+
+.container    .product_content_box .product_title{
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-transform: uppercase;
+}
+
+.container     .product_content_box .product_desc{
+    margin-top: 7px;
+    height: 56px;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.container    .product_content_box .review_box{
+    margin-top: 37px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.container    .review_box img{
+    margin-right: 5px;
+
+}
+
+.container    .review_box span{
+    margin-left: 10px;
+
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.container    .product_content_box .price_box{
+    margin-top: 10px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.container     .price_box strong{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+}
+
+.container     .price_box span {
+    margin-left: 10px;
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-decoration-line: line-through;
 }
 
 /*Header started*/
@@ -427,17 +585,6 @@
     justify-content: space-between;
 }
 
-.selling_product_frame   .product_wrapper .next_prev_box{
-    width: 25px;
-
-}
-
-.selling_product_frame   .next_prev_box img{
-    position: absolute;
-    top: 50%;
-    cursor: pointer;
-
-}
 
 .selling_product_frame   .product_wrapper .product_boxes{
     position: relative;
@@ -449,140 +596,6 @@
 
 }
 
-.selling_product_frame   .product_boxes .prooduct_box{
-    width: 306px;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-
-}
-
-.selling_product_frame   .prooduct_box .product_img_box{
-    width: 100%;
-    height: 280px;
-
-}
-
-.selling_product_frame   .product_img_box .hover_box{
-    display: none;
-    width: 100%;
-    height: 100%;
-
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-
-}
-.selling_product_frame   .hover_box button{
-    margin-bottom: 10px;
-    width: 260px;
-    height: 50px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border: none;
-    outline: none;
-
-    border-radius: 6px;
-    box-shadow: 0px 5px 20px 0px rgba(0, 83, 246, 0.1);
-    background: rgb(0, 83, 246);
-
-    color: rgb(68, 50, 151);
-    font-family: 'Jost';
-    font-style: normal;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 23px;
-}
-
-.selling_product_frame   .product_img_box:hover .hover_box{
-
-    display: flex;
-}
-
-.selling_product_frame   .prooduct_box  .product_content_box {
-    padding: 5px 22px;
-    box-sizing: border-box;
-    width: 100%;
-    height: auto;
-}
-
-.selling_product_frame   .product_content_box .product_title{
-    color: rgb(98, 105, 116);
-    font-family: Jost;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-transform: uppercase;
-}
-
-.selling_product_frame   .product_content_box .product_desc{
-    margin-top: 7px;
-    height: 56px;
-    color: rgb(4, 30, 66);
-    font-family: Jost;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0%;
-}
-
-.selling_product_frame   .product_content_box .review_box{
-    margin-top: 7px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.selling_product_frame   .review_box img{
-    margin-right: 5px;
-
-}
-
-.selling_product_frame   .review_box span{
-    margin-left: 10px;
-
-    color: rgb(98, 105, 116);
-    font-family: Jost;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-}
-
-.selling_product_frame   .product_content_box .price_box{
-    margin-top: 10px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.selling_product_frame   .price_box strong{
-    color: rgb(4, 30, 66);
-    font-family: Jost;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 26px;
-    letter-spacing: 0%;
-}
-
-.selling_product_frame   .price_box span {
-    margin-left: 10px;
-    color: rgb(98, 105, 116);
-    font-family: Jost;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0%;
-    text-decoration-line: line-through;
-}
 
 /*Adv Frame*/
 
@@ -628,7 +641,7 @@
 
 
 
-.container .spec_product_wrapper {
+.spec_product_frame  .container .spec_product_wrapper {
     position: relative;
     margin-top: 35px;
     width: 100%;
@@ -640,7 +653,7 @@
 
 }
 
-.spec_product_wrapper .big_product_box {
+.spec_product_frame  .spec_product_wrapper .big_product_box {
     position: relative;
     padding: 30px;
     width: 664px;
@@ -655,7 +668,7 @@
 
 }
 
-.big_product_box .big_product_content{
+.spec_product_frame  .big_product_box .big_product_content{
     width: 160px;
 
     display: flex;
@@ -663,7 +676,7 @@
     flex-direction: column;
 }
 
-.big_product_content span {
+.spec_product_frame  .big_product_content span {
     color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 15px;
@@ -672,7 +685,7 @@
     letter-spacing: 0%;
 }
 
-.big_product_content p {
+.spec_product_frame  .big_product_content p {
     margin:  7px 0;
     color: rgb(4, 30, 66);
     font-family: Jost;
@@ -682,7 +695,7 @@
     letter-spacing: 0%;
 }
 
-.big_product_content a {
+.spec_product_frame  .big_product_content a {
     color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 15px;
@@ -691,7 +704,7 @@
     letter-spacing: 0%;
 }
 
-.big_product_box img{
+.spec_product_frame  .big_product_box img{
     position: absolute;
     width: 322px;
     height: 309px;
@@ -699,7 +712,7 @@
     right: 5%;
 }
 
-.spec_product_wrapper .small_product_wrapper{
+.spec_product_frame  .spec_product_wrapper .small_product_wrapper{
     margin-left: 30px;
     width: 620px;
     height: 368px;
@@ -709,7 +722,7 @@
     flex-wrap: wrap;
 }
 
-.small_product_wrapper .small_product_box{
+.spec_product_frame  .small_product_wrapper .small_product_box{
     position: relative;
     padding: 30px;
     width: 293px;
@@ -724,17 +737,17 @@
 }
 
 
-.small_product_box:nth-child(odd){
+.spec_product_frame  .small_product_box:nth-child(odd){
     margin-right: 30px;
 }
-.small_product_box .small_product_content{
+.spec_product_frame  .small_product_box .small_product_content{
     display: flex;
     flex-direction: column;
 
 }
 
 
-.small_product_content  strong{
+.spec_product_frame  .small_product_content  strong{
     color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 16px;
@@ -743,7 +756,7 @@
     letter-spacing: 0%;
 }
 
-.small_product_content  span{
+.spec_product_frame  .small_product_content  span{
     color: rgb(98, 105, 116);
     font-family: Jost;
     font-size: 13px;
@@ -752,13 +765,74 @@
     letter-spacing: 0%;
 }
 
-.small_product_box img{
+.spec_product_frame   .small_product_box img {
     position: absolute;
     right: 30px;
     bottom: 15px;
 
 
+}
 
+/*TV FRAME*/
+
+
+.home_page .tv_frame {
+
+    position: relative;
+    margin-top: 90px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.tv_frame .container{
+    flex-direction: column;
+}
+
+.container .tv_wrapper{
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.tv_wrapper .tv_product_boxes {
+    width: 1300px;
+    height: 452px;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.tv_product_boxes .tv_product_box{
+    width: 260px;
+    height: 452px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background: #ffffff;
+}
+
+.tv_product_box .product_img{
+    width: 100%;
+    height: 280px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
 
 
 
