--- a/public/css/home.css
+++ b/public/css/home.css
@@ -834,6 +834,235 @@
 
 }
 
+/*EVENT FRAME*/
+
+
+.event_frame{
+    margin-top: 105px;
+    width: 100%;
+    height: 632px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /*background-color: red;*/
+
+    background-image: url("../images/icons/event_bg.png");
+}
+/*TOP DEALS FRSME*/
+.top_deals_frame {
+    width: 335px;
+    height: 214px;
+    /*background-color: aqua;*/
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.top_deals_frame span{
+    text-transform: capitalize;
+    color: rgb(255, 255, 255);
+    font-family: Jost;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+.top_deals_numbers {
+    width: 100%;
+    height: 62px;
+
+    display: flex;
+    justify-content: space-between;
+}
+.top_deals_numbers strong{
+    color: rgb(255, 255, 255);
+    font-family: Jost;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+.top_deals_numbers p{
+    color: rgb(255, 255, 255);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.top_deals_frame .show_more_btn{
+    width: 141px;
+    height: 52px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    background: rgb(245, 195, 75);
+}
+
+.show_more_btn a{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.event_product_box {
+    margin-left: 10px;
+    width: 205px;
+    height: 392px;
+    padding: 15px;
+
+
+    display: flex;
+    flex-direction: column;
+
+    box-sizing: border-box;
+    border-radius: 6px;
+    background: rgb(255, 255, 255);
+}
+
+.event_product_box .product_img{
+    width: 100%;
+    height: auto;
+
+
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.product_img {
+    width: 195px;
+    height: 220px;
+
+    border: 1px dashed #d6d6d6;
+}
+
+
+.event_product_content_box {
+    margin-top: 20px;
+    width: 168px;
+    height: 150px;
+}
+
+.event_product_content_box  .product_title {
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.event_product_content_box .product_desc{
+
+    width: 178px;
+    height: 56px;
+
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.event_product_content_box .review_box{
+    width: 165px;
+    height: 23px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+}
+
+.review_box img {
+    width: 10px;
+    height: 10px;
+}
+
+.event_product_content_box  .review_box span {
+    width: 90px;
+    height: 23px;
+
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.event_image_box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.event_frame .container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.event_frame .next_prev_box{
+    margin-left: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
