--- a/public/css/all.css
+++ b/public/css/all.css
@@ -162,6 +162,98 @@
     align-items: center;
 }
 
+  /* shop brand frame */
+
+
+    
+  .shop_brand_frame{
+    margin-top: 40px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+}
+
+.shop_brand_frame  .container .shop_brand_wrapper{
+    width: 973px;
+    height: 122px;
+
+}
+
+.shop_brand_frame   .container .shop_brand_wrapper  p{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+
+.shop_brand_frame   .container .shop_brand_wrapper .brands_box{
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.shop_brand_frame   .container .shop_brand_wrapper .brands_box span{
+    width: 95px;
+    height: 52px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid rgb(234, 234, 234);
+    border-radius: 6px;
+
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.shop_brand_frame    .container .shop_brand_wrapper .brands_box span:hover{
+    border-radius: 6px;
+
+    background: rgb(68, 50, 151);
+
+    color: rgb(255, 255, 255);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
