--- a/public/css/all.css
+++ b/public/css/all.css
@@ -227,6 +227,130 @@
 }
 
 
+/* selling product */
+
+.selling_product_frame .container .product_wrapper {
+    margin-top: 70px;
+}
+.product_wrapper .product_box{
+
+    width: 220px;
+    height: 392px;
+
+    border: 1px  solid rgb(240, 232, 232);
+    box-sizing: border-box;
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.product_box_text{
+   
+    margin: 16px 0  0 20px;
+
+    width: 200px;
+    height: 100px;
+
+
+}
+.product_box_text .title_product{
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.product_box_text p{
+    width: 100%;
+    height: 56px;
+    overflow: hidden;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.product_box img{
+    width: 179px ;
+    height: 190px;
+
+    border: 1px dashed  rgba(207, 201, 201, 0.658);
+
+    
+}
+
+.price_box{
+    width: 88px;
+    height: 28px;
+    margin-right: 86px;
+
+}
+
+.price_box strong{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+.price_box span{
+    margin-left: 10px;
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-decoration-line: line-through;
+}
+
+
+.review_box{
+    margin-bottom: 100px;
+    width: 177px;
+    height: 23px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+ .review_box img {
+    width: 10px;
+    height: 10px;
+}
+
+.review_box span {
+    width: 90px;
+    height: 23px;
+    margin-left: 20px;
+
+    color: rgb(98, 105, 116);
+   font-family: var(--font);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+
+
+
+
+
+
+
 
 
 
